--- a/P008009.opf/meta.yml
+++ b/P008009.opf/meta.yml
@@ -1,15 +1,16 @@
-id: opecha:P008009
+id: P008009
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W2CZ7977
   title: ནམ་མཁའ་རྒྱལ་མཚན་གྱི་གསང་བའི་རྣམ་ཐར་ལུང་བསྟན་དང་བཅས་པ
-  volume:
+  author: ''
+  volumes:
     ea98cc8785ce4fcaac659a948da773b1:
       image_group_id: I1KG3773
       title: Volume 1 of gsang ba'i rnam thar lung bstan dang bcas pa
       volume_number: 1
       total_pages: 40
-  author: ''
+      base_file: v001.txt
 ebook_metadata:
   title: ནམ་མཁའ་རྒྱལ་མཚན་གྱི་གསང་བའི་རྣམ་ཐར་ལུང་བསྟན་དང་བཅས་པ
   author: ''
