--- a/P008009.opf/meta.yml
+++ b/P008009.opf/meta.yml
@@ -5,11 +5,12 @@ source_metadata:
   title: ནམ་མཁའ་རྒྱལ་མཚན་གྱི་གསང་བའི་རྣམ་ཐར་ལུང་བསྟན་དང་བཅས་པ
   author: ''
   volumes:
-    d800ce20a5464580b3b9a11641bcd293:
+    ea98cc8785ce4fcaac659a948da773b1:
       image_group_id: I1KG3773
-      title: ''
+      title: Volume 1 of gsang ba'i rnam thar lung bstan dang bcas pa
       volume_number: 1
       total_pages: 40
+      base_file: v001.txt
 ebook_metadata:
   title: ནམ་མཁའ་རྒྱལ་མཚན་གྱི་གསང་བའི་རྣམ་ཐར་ལུང་བསྟན་དང་བཅས་པ
   author: ''
