--- a/P008009.opf/layers/v001/pagination.yml
+++ b/P008009.opf/layers/v001/pagination.yml
@@ -3,275 +3,236 @@ annotation_type: pagination
 revision: '00001'
 annotations:
   4004a25162ad4816b74307bc690f19d4:
-    page_index: 1a
-    page_info: null
-    reference: I1KG37730001
+    imgnum: 1
+    reference: I1KG37730001.tif
     span:
       start: 0
       end: 650
   998ca6a36b32427d88b9e2abf9510b17:
-    page_index: 2a
-    page_info: null
-    reference: I1KG37730003
+    imgnum: 3
+    reference: I1KG37730003.tif
     span:
       start: 655
       end: 659
   6a7d211765164b5a92c5e96677f230f8:
-    page_index: 2b
-    page_info: null
-    reference: I1KG37730004
+    imgnum: 4
+    reference: I1KG37730004.tif
     span:
       start: 664
       end: 1348
   1a682efbdefd4ea0a180d892e714a13a:
-    page_index: 3a
-    page_info: null
-    reference: I1KG37730005
+    imgnum: 5
+    reference: I1KG37730005.tif
     span:
       start: 1353
       end: 1594
   67206b63a3a24f74824b15b2aab2858b:
-    page_index: 3b
-    page_info: null
-    reference: I1KG37730006
+    imgnum: 6
+    reference: I1KG37730006.tif
     span:
       start: 1599
       end: 2755
   efc7b50b22e540e487525120561607c8:
-    page_index: 4a
-    page_info: null
-    reference: I1KG37730007
+    imgnum: 7
+    reference: I1KG37730007.tif
     span:
       start: 2760
       end: 3820
   5dcc7c69d13c46d8913cb38a456c5660:
-    page_index: 4b
-    page_info: null
-    reference: I1KG37730008
+    imgnum: 8
+    reference: I1KG37730008.tif
     span:
       start: 3825
       end: 5046
   3833f44137cd42818bf332addaed2c88:
-    page_index: 5a
-    page_info: null
-    reference: I1KG37730009
+    imgnum: 9
+    reference: I1KG37730009.tif
     span:
       start: 5051
       end: 5819
   55cc15ec63db41f3b86fe6308e0ad5f2:
-    page_index: 5b
-    page_info: null
-    reference: I1KG37730010
+    imgnum: 10
+    reference: I1KG37730010.tif
     span:
       start: 5824
       end: 6743
   86b7aa91eedd4332a12472f2603a6fd6:
-    page_index: 6a
-    page_info: null
-    reference: I1KG37730011
+    imgnum: 11
+    reference: I1KG37730011.tif
     span:
       start: 6748
       end: 7844
   cc6b5acc2c45438f8a1a4bb67e99d622:
-    page_index: 6b
-    page_info: null
-    reference: I1KG37730012
+    imgnum: 12
+    reference: I1KG37730012.tif
     span:
       start: 7849
       end: 8785
   2acb4c9030be48e1b5201f920cfd7f4c:
-    page_index: 7a
-    page_info: null
-    reference: I1KG37730013
+    imgnum: 13
+    reference: I1KG37730013.tif
     span:
       start: 8790
       end: 9924
   3d0db38d3ed64732a46651897ca29ca0:
-    page_index: 7b
-    page_info: null
-    reference: I1KG37730014
+    imgnum: 14
+    reference: I1KG37730014.tif
     span:
       start: 9929
       end: 10993
   a4eef3dde9454a09a704ac51c7905318:
-    page_index: 8a
-    page_info: null
-    reference: I1KG37730015
+    imgnum: 15
+    reference: I1KG37730015.tif
     span:
       start: 10998
       end: 12093
   ad28e2d817c742adb5b4522f0424598b:
-    page_index: 8b
-    page_info: null
-    reference: I1KG37730016
+    imgnum: 16
+    reference: I1KG37730016.tif
     span:
       start: 12098
       end: 13223
   a663d9aa4ece4ddf8d477dcefb0e14cd:
-    page_index: 9a
-    page_info: null
-    reference: I1KG37730017
+    imgnum: 17
+    reference: I1KG37730017.tif
     span:
       start: 13228
       end: 14200
   135efec04ba44894a0aa4a70bb5813fd:
-    page_index: 9b
-    page_info: null
-    reference: I1KG37730018
+    imgnum: 18
+    reference: I1KG37730018.tif
     span:
       start: 14205
       end: 15250
   96d3790c57614e3fae6b14c2a60dd0e9:
-    page_index: 10a
-    page_info: null
-    reference: I1KG37730019
+    imgnum: 19
+    reference: I1KG37730019.tif
     span:
       start: 15255
       end: 16223
   403bb0d397364625b7e1fa37607966c2:
-    page_index: 10b
-    page_info: null
-    reference: I1KG37730020
+    imgnum: 20
+    reference: I1KG37730020.tif
     span:
       start: 16228
       end: 17183
   a1e0f75245cd46c880d52658bce8a15c:
-    page_index: 11a
-    page_info: null
-    reference: I1KG37730021
+    imgnum: 21
+    reference: I1KG37730021.tif
     span:
       start: 17188
       end: 18015
   42da49aff4354ef0b848bcd1fcad6f32:
-    page_index: 11b
-    page_info: null
-    reference: I1KG37730022
+    imgnum: 22
+    reference: I1KG37730022.tif
     span:
       start: 18020
       end: 18926
   d877d2be637d46b78b2a54195b6ea694:
-    page_index: 12a
-    page_info: null
-    reference: I1KG37730023
+    imgnum: 23
+    reference: I1KG37730023.tif
     span:
       start: 18931
       end: 19905
   3210dc63f02d4817b85a5905804aba0f:
-    page_index: 12b
-    page_info: null
-    reference: I1KG37730024
+    imgnum: 24
+    reference: I1KG37730024.tif
     span:
       start: 19910
       end: 20973
   66938e4a18fa4b2c92fa5c7b69367eab:
-    page_index: 13a
-    page_info: null
-    reference: I1KG37730025
+    imgnum: 25
+    reference: I1KG37730025.tif
     span:
       start: 20978
       end: 21793
   223b7e426f8f44398c326c5dea5ebb95:
-    page_index: 13b
-    page_info: null
-    reference: I1KG37730026
+    imgnum: 26
+    reference: I1KG37730026.tif
     span:
       start: 21798
       end: 22821
   6295a2c19d154a12ab29a1085ab71a20:
-    page_index: 14a
-    page_info: null
-    reference: I1KG37730027
+    imgnum: 27
+    reference: I1KG37730027.tif
     span:
       start: 22826
       end: 23751
   3157ad2ba8a44a7c814700087b56657b:
-    page_index: 14b
-    page_info: null
-    reference: I1KG37730028
+    imgnum: 28
+    reference: I1KG37730028.tif
     span:
       start: 23756
       end: 24813
   71de3530dfd64fa99d22dfe5a41f2b43:
-    page_index: 15a
-    page_info: null
-    reference: I1KG37730029
+    imgnum: 29
+    reference: I1KG37730029.tif
     span:
       start: 24818
       end: 25851
   d9b0cf22c5c240219eae6e895429cc15:
-    page_index: 15b
-    page_info: null
-    reference: I1KG37730030
+    imgnum: 30
+    reference: I1KG37730030.tif
     span:
       start: 25856
       end: 26816
   f3ca9a7814aa49deb9fb6f22a484e471:
-    page_index: 16a
-    page_info: null
-    reference: I1KG37730031
+    imgnum: 31
+    reference: I1KG37730031.tif
     span:
       start: 26821
       end: 27893
   3eb7edfb51f44c46850775a739057dbf:
-    page_index: 16b
-    page_info: null
-    reference: I1KG37730032
+    imgnum: 32
+    reference: I1KG37730032.tif
     span:
       start: 27898
       end: 28999
   4e7647bc68d54f98ad3b1a74d2fb4b27:
-    page_index: 17a
-    page_info: null
-    reference: I1KG37730033
+    imgnum: 33
+    reference: I1KG37730033.tif
     span:
       start: 29004
       end: 29981
   98c5ba08fd24433b9201b43e5a5c2ee0:
-    page_index: 17b
-    page_info: null
-    reference: I1KG37730034
+    imgnum: 34
+    reference: I1KG37730034.tif
     span:
       start: 29986
       end: 30617
   ac3abd3842b845079eaa67895fc6f819:
-    page_index: 18a
-    page_info: null
-    reference: I1KG37730035
+    imgnum: 35
+    reference: I1KG37730035.tif
     span:
       start: 30622
       end: 31420
   45ebb7db98a343f38366b39275f72050:
-    page_index: 18b
-    page_info: null
-    reference: I1KG37730036
+    imgnum: 36
+    reference: I1KG37730036.tif
     span:
       start: 31425
       end: 32466
   0571519df77848fea183e1c04ff1cc9f:
-    page_index: 19a
-    page_info: null
-    reference: I1KG37730037
+    imgnum: 37
+    reference: I1KG37730037.tif
     span:
       start: 32471
       end: 33608
   09e5455e9720489ba2af0cc51af4d8ab:
-    page_index: 19b
-    page_info: null
-    reference: I1KG37730038
+    imgnum: 38
+    reference: I1KG37730038.tif
     span:
       start: 33613
       end: 34503
   d41baee0a61444d3a4dcb1e1d3d0331a:
-    page_index: 20a
-    page_info: null
-    reference: I1KG37730039
+    imgnum: 39
+    reference: I1KG37730039.tif
     span:
       start: 34508
       end: 35005
   49bd54fa0a434b7194be824fd74f4ad4:
-    page_index: 20b
-    page_info: null
-    reference: I1KG37730040
+    imgnum: 40
+    reference: I1KG37730040.tif
     span:
       start: 35010
       end: 35011
