--- a/P008009.opf/layers/v001/Pagination.yml
+++ b/P008009.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: d5c83bfad3554d7f952c14b99fc194a8
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   4004a25162ad4816b74307bc690f19d4:
