--- a/P008009.opf/meta.yml
+++ b/P008009.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P008009
 initial_creation_type: ocr
 created_at: 24/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-17 12:54:58.700856
 source_metadata:
   id: bdr:W2CZ7977
   title: ནམ་མཁའ་རྒྱལ་མཚན་གྱི་གསང་བའི་རྣམ་ཐར་ལུང་བསྟན་དང་བཅས་པ
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 40
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
